--- a/index.css
+++ b/index.css
@@ -1,3 +1,45 @@
-#heading {
-    color: aqua;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 100px;
+
+}
+.nav-item{
+    padding: 0px 20px;
+}
+
+.nav-item > ul{
+    display: flex;
+list-style-type: none;
+font-size: 24px;
+
+}
+.nav-item >ul > li{
+    padding: 10px;
+    margin: 10px;
+}
+.res-card{
+    padding: 5px;
+    width: 200px;
+    height: 300px;
+    border: 1px solid black;
+    
+}
+
+.search{
+    padding: 10px;
+}
+
+.res-logo{
+   
+    width: 100%;
+}
+
+.res-container{
+    display: flex;
+    padding: 10px;
 }
